# generalizing-machine

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/generalizing_machine/: __init__.py  cli.py  machina.yaml  machine.py
