[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "generalizing-machine"
version = "0.0.1"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "A Machine that generalizes."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["generalizing-machine"]

dependencies = [
    "PyGithub >= 2.6.0",
    "PyYAML >= 6.0.1",
    "urllib3 >= 2.0.4",
    "requests >= 2.32.3",
    "click >= 8.3.0"
]

[project.scripts]
generalizing-machine = "generalizing_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/generalizing-machine/generalizing-machine"
"Bug Tracker" = "https://github.com/generalizing-machine/generalizing-machine/issues"